# rp2040js

./: .eslintrc  .gitignore  LICENSE  README.md  assembler.spec.ts  assembler.ts  package-lock.json  package.json  prettier.config.js  rp2040.spec.ts  rp2040.ts  tsconfig.demo.json  tsconfig.json
.github/workflows/: ci-micropython.yml  ci-pico-sdk.yml  ci-test.yml
build-scripts/: dist-package-json.js
debug/: gdbdiff.ts
demo/: bootrom.ts  circuitpython-run.ts  dual-mcu.ts  emulator-run.ts  intelhex.ts  load-flash-circuitpython.ts  load-flash.ts  load-uf2.ts  micropython-run.ts
demo/dual-mcu/: CMakeLists.txt  dual-mcu-0.hex  dual-mcu-1.hex  dual-mcu.c  dual-mcu.pio
src/: blink.hex  bootrom.ts  clock.ts  core.ts  cortex-m0-core.ts  gdbserver.ts  gpio-pin.ts  hello_uart.hex  index.ts  instructions.spec.ts  interpolator.ts  irq.ts  rp2040.spec.ts  rp2040.ts  run-blink.ts  simulator.ts  sio-core.ts  sio.spec.ts  sio.ts  uart.ts
src/clock/: clock.ts  mock-clock.ts  realtime-clock.ts  simulation-clock.ts
src/gdb/: gdb-connection.ts  gdb-server.ts  gdb-target.ts  gdb-tcp-server.ts  gdb-utils.ts
src/peripherals/: adc.ts  busctrl.ts  clocks.ts  dma.spec.ts  dma.ts  i2c.ts  io.ts  pads.ts  peripheral.ts  pio.spec.ts  pio.ts  ppb.ts  psm.ts  pwm.ts  reset.ts  rtc.ts  spi.ts  ssi.ts  syscfg.ts  sysinfo.ts  tbman.ts  timer.spec.ts  timer.ts  uart.spec.ts  uart.ts  usb.ts  watchdog.ts  xosc.ts
test/: micropython-spi-test.ts  mklittlefs.py  requirements.txt
test-utils/: create-test-driver.ts  gdbclient.ts  test-driver-gdb.ts  test-driver-rp2040.ts  test-driver.ts
(+22 files in other folders)
